--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -26,8 +26,8 @@ html { height: 100%; }
 body {
   color: black;
   font-family: monospace;
-  font-size: 1.3rem;
-  line-height: 1.3;
+  font-size: 16px;
+  line-height: 1.4;
   margin: 0;
   min-height: 100%;
 }
