--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,30 +1,12 @@
-// -------------- THEME SWITCHER -------------- //
-@mixin dark-appearance {
-  filter: invert(1);
-  img {
-    filter: invert(1);
-
-    &.ioda { filter: invert(0); }
-  }
-}
-
-body[a="dark"] { @include dark-appearance; }
-
-
-@media (prefers-color-scheme: dark) {
-  body[a="auto"] { @include dark-appearance; }
-}
-// -------------------------------------------- //
-
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
-html, body { background: white; }
+html, body { background: black; }
 
 html { height: 100%; }
 
 body {
-  color: black;
+  color: white;
   font-family: monospace;
   font-size: 14px;
   line-height: 1.4;
@@ -44,7 +26,7 @@ p { margin: 1rem 0; }
 
 li { margin: 0.4rem 0; }
 
-*:target { background: yellow; }
+*:target { background: orange; }
 
 .w {
   width: fit-content;
@@ -64,14 +46,14 @@ hr {
 table { width: 100%; }
 
 table, th, td {
-  border: thin solid black;
+  border: thin solid white;
   border-collapse: collapse;
   padding: 0.4rem;
 }
 
 code {
-  color: white;
-  background: black;
+  color: black;
+  background: white;
 }
 
 div.highlighter-rouge code {
@@ -83,7 +65,7 @@ div.highlighter-rouge code {
 
 blockquote {
   font-style: italic;
-  border: thin solid black;
+  border: thin solid white;
   padding: 1rem;
 
   p { margin: 0; }
